# openai-canvas

./: .gitignore  README.md  pyproject.toml  setup.cfg
openai_canvas/apps/: local_time.py  order_detail.py  pythonista.py
openai_canvas/scripts/: local_time.py  order_detail.py  pythonista.py
